[project]
name = "saturn-notebook"
version = "0.1.0"
description = "Plain-text Python notebooks with checkpointing"
authors = ["Dmitriy Morozov <dmitriy@mrzv.org>"]
license = "BSD-3-Clause-LBNL"
packages = [
    { include = "saturn_notebook" },
]
repository = "https://github.com/mrzv/saturn"
homepage = "https://github.com/mrzv/saturn"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "argh==0.26.2",
    "atomicwrites>=1.4.0",
    "dill>=0.3.8",
    "importlib-metadata>=4.11.3",
    "markdown>=3.3.6",
    "matplotlib>=3.5.0",
    "more-itertools>=8.12.0",
    "nbformat>=5.7.0",
    "ptpython>=3.0.29",
    "pygments>=2.18.0",
    "rich>=12.3.0",
    "wurlitzer>=3.0.2",
]

[project.optional-dependencies]
viewer = [
    "appdirs>=1.4.4",
    "pywebview>=3.3.1",
]

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
    "mpi4py>=4.0.0",
]
