[project]
name = "saturn-notebook"
dynamic = ["version"]
description = "Plain-text Python notebooks with checkpointing"
author = "Dmitriy Morozov <dmitriy@mrzv.org>"
license = "BSD-3-Clause-LBNL"
packages = [
    { include = "saturn_notebook" },
]
repository = "https://github.com/mrzv/saturn"
homepage = "https://github.com/mrzv/saturn"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "argh==0.26.2",
    "atomicwrites>=1.4.0",
    "dill>=0.3.8",
    "importlib-metadata>=4.11.3",
    "markdown>=3.3.6",
    "matplotlib>=3.5.0",
    "more-itertools>=8.12.0",
    "nbformat>=5.7.0",
    "ptpython>=3.0.29",
    "pygments>=2.18.0",
    "rich>=12.3.0",
    "wurlitzer>=3.0.2",
]

[project.optional-dependencies]
viewer = [
    "appdirs>=1.4.4",
    "pywebview>=3.3.1",
]

[project.scripts]
saturn = "saturn_notebook.__main__:main"

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "mpi4py>=4.0.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "default-unprefixed"
