[project]
name = "saturn-notebook"
dynamic = ["version"]
description = "Plain-text Python notebooks with checkpointing"
authors = [
    { name = "Dmitriy Morozov", email = "dmitriy@mrzv.org" },
]
license = "BSD-3-Clause-LBNL"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "argh==0.26.2",
    "atomicwrites>=1.4.0",
    "dill>=0.3.8",
    "importlib-metadata>=4.11.3",
    "markdown>=3.3.6",
    "matplotlib>=3.5.0",
    "more-itertools>=8.12.0",
    "nbformat>=5.7.0",
    "ptpython>=3.0.29",
    "pygments>=2.18.0",
    "rich>=12.3.0",
    "wurlitzer>=3.0.2",
]

[project.optional-dependencies]
viewer = [
    "appdirs>=1.4.4",
    "pywebview>=3.3.1",
]

[project.scripts]
saturn = "saturn_notebook.__main__:main"

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "mpi4py>=4.0.0",
    "mypy>=1.14.0,<1.15.0",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "twine>=6.0.0",
]

[project.urls]
Repository = "https://github.com/mrzv/saturn"
Homepage = "https://github.com/mrzv/saturn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E9", "F"]

[tool.ruff.lint.per-file-ignores]
"samples/simple.py" = ["F401"]
"tests/simple.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
files = [
    "saturn_notebook/archive.py",
    "saturn_notebook/convert.py",
    "saturn_notebook/evaluate.py",
    "saturn_notebook/html.py",
    "saturn_notebook/mpi.py",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.git",
    "/.github",
    "/.jj",
    "/.opencode",
    "/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["saturn_notebook"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "default-unprefixed"
